Added a line to the original document

--- a/ch03.sample.markdown
+++ b/ch03.sample.markdown
@@ -1,6 +1,7 @@
 Teaching for Uncoverage rather than Coverage 
 ============================================
 
+This line represents an addition to the original document.
 Mark Sample
 
 I recently
